Fix box padding so all text fits
Adds extra padding. Does not account for varying font sizes etc

--- a/lmfdb/inventory_app/templates/inv_style.css
+++ b/lmfdb/inventory_app/templates/inv_style.css
@@ -22,9 +22,9 @@
 }
 
 .edit_input {
-  padding-top: 0.2em;
-  padding-bottom: 0.2em;
-  min-height: 30px;
+  padding-top: 0.1em;
+  padding-bottom: 0.1em;
+  min-height: 1.8em;
 }
 
 .locked_input {
